<resources>
    <string name="app_name">diandian</string>
    <string name="view_all_comments">查看全部评论</string>
    <string name="hot_comment_label">热门评论</string>
    <string name="login_username">用户名</string>
    <string name="login_password">密码</string>
    <string name="login_register">立即注册</string>
    <string name="login_find_password">找回密码</string>
    <string name="login_login">登录</string>
    <string name="register_username">用户名</string>
    <string name="register_password">密码</string>
    <string name="register_confirm_password">确认密码</string>
    <string name="register_phone">手机号</string>
    <string name="register_birthday">生日</string>
    <string name="register_gender">性别</string>
    <string name="register_male">男</string>
    <string name="register_female">女</string>
    <string name="register_secret">保密</string>
    <string name="birthday_title">请选择你的生日</string>
    <string name="register_button">注册</string>


</resources>
